<resources>
    <string name="app_name">UserPost</string>
    <string name="enter_title">Enter the title</string>
    <string name="enter_description">Enter the description</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="preference_file_key">post_preference</string>
    <string name="jwt_token">jwt_preference_token</string>
    <string name="jwt_userId">jwt_user_id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Login Activity-->
    <string name="enter_user_name_password_label">Enter User name and password</string>
    <string name="user_name_field">User Name</string>
    <string name="password_field">Password</string>
    <string name="forget_key_label">Recovery password</string>
    <string name="register_label">Register</string>
    <string name="expert_btn">Expert</string>
    <string name="learner_btn">Learner</string>
    <string name="hi_welcome_label">Hi!...Welcome</string>

</resources>
