<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.loginV2.LoginV2Activity"
    android:background="@color/white"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:text="@string/hi_welcome_label"
        android:layout_marginTop="40dp"
        android:textColor="@color/title"
        android:textSize="24sp"
        />

    <TextView
        style="@style/Text.Medium.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/enter_user_name_password_label"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@id/userAndPasswordCardView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/userAndPasswordCardView"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="0dp"
        app:cardCornerRadius="18dp"
        android:layout_marginBottom="@dimen/margin_left_normal"
        app:layout_constraintBottom_toTopOf="@id/recoveryPassWordTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/shape_rectangle_stroke"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"

            >

            <EditText
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText"
                android:hint="@string/user_name_field"
                app:layout_constraintTop_toTopOf="parent"
                />


            <EditText
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText"
                android:hint="@string/password_field"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/userNameTextView"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recoveryPassWordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Text.Medium.SubTitle.Blue"
        android:layout_marginRight="4dp"
        android:gravity="center_vertical"
        android:text="@string/forget_key_label"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
         />

    <TextView
        android:id="@+id/registerLabel"
        style="@style/Text.Medium.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/register_label"
        android:textStyle="normal|bold"
        app:layout_constraintTop_toBottomOf="@id/recoveryPassWordTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin_left_extreme"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/registerLabel"
        android:layout_marginTop="@dimen/margin_left_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:background="@drawable/btn_accent_fill_color"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/expert_btn"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_normal"
            android:layout_marginRight="@dimen/margin_left_normal"
            />

        <Button
            android:background="@drawable/btn_border_blue"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/learner_btn"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_normal"
            android:layout_marginRight="@dimen/margin_left_normal"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>